extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo__can_force_bun_instead_of_node-2.snap
---
source: crates/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"client/moon.yml\")).unwrap()"
---
language: javascript
platform: bun
tasks:
  build:
    command: bun run build
    deps:
    - ^:build
    outputs:
    - client/**/*
  typecheck:
    command: bun run typecheck
    deps:
    - ~:build

