extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo__can_force_bun_instead_of_node-3.snap
---
source: crates/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"server/moon.yml\")).unwrap()"
---
language: typescript
platform: bun
tasks:
  build:
    command: bun run build
    deps:
    - ^:build
    outputs:
    - server/**/*
  lint:
    command: bun run lint
    options:
      outputStyle: buffer-only-failure

