extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo__converts_project_files-2.snap
---
source: crates/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"client/moon.yml\")).unwrap()"
---
language: javascript
platform: node
tasks:
  build:
    command: yarn run build
    deps:
    - ^:build
    outputs:
    - client/**/*
  typecheck:
    command: yarn run typecheck
    deps:
    - ~:build

